<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<properties>
		<java.version>18</java.version>
		<maven.compiler.release>${java.version}</maven.compiler.release>
		<maven.compiler.target>${java.version}</maven.compiler.target>
		<maven.compiler.source>${java.version}</maven.compiler.source>

		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<cfsVersion>1.0</cfsVersion>
	</properties>

	<groupId>com.github.lapissea</groupId>
	<artifactId>jdatablockfs</artifactId>
	<packaging>pom</packaging>
	<version>1.0</version>
	<modules>
		<module>jdatablockfs.run</module>
		<module>jdatablockfs.tools</module>
		<module>Jorth</module>
	</modules>

	<dependencies>
		<dependency>
			<groupId>com.github.lapissea</groupId>
			<artifactId>jlapisutil</artifactId>
		</dependency>
		<dependency>
			<groupId>com.github.lapissea</groupId>
			<artifactId>Jorth</artifactId>
			<version>0.0.1</version>
		</dependency>
		<dependency>
			<groupId>org.roaringbitmap</groupId>
			<artifactId>RoaringBitmap</artifactId>
			<version>0.9.25</version>
		</dependency>
		<dependency>
			<groupId>ru.vyarus</groupId>
			<artifactId>generics-resolver</artifactId>
			<version>3.0.3</version>
		</dependency>
	</dependencies>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.github.lapissea</groupId>
				<artifactId>jlapisutil</artifactId>
				<version>1.0.11</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<release>${maven.compiler.release}</release>
					<compilerArgs>--enable-preview</compilerArgs>
					<source>${java.version}</source>
					<target>${java.version}</target>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
